	  definition of include/nuttx/spi.h.  But this raises a problem when the
	  MCU has multiple blocks for differ SPI implementatins as does the
	  LPC17xx (and also as does other architectures like STM32 that have
	  USARTs that can serve as SPI interfaces as well).  These were renamed
	  to lpc17_spiinitialize() and lpc17_sspinitialize() in this case.
	  Problem reported by M. Kannan (2013-4-01).
	* arch/arm/src/lpc17xx/lpc17_gpdma.c and lpc17_idle.c:  In sleep mode,
	  DMA can only be performed from peripheral SRAM.  CPU SRAM is shutdown
	  in sleep mode.  In order to simplify DMA memory allocation, the LPC17xx
	  IDLE will now hold off going to sleep mode if there is a DMA in progress
	 (2013-4-01).
	* configs/open1788/src/lpc17_autoleds.c:  Reversed sense of the IDLE LCD.
	  It is now off when the LPC17 is sleeping and on when awake.  That is
	  much more useful because it provides a good visual indication of the
	  dynamic CPU load (2013-4-01).
	* configs/open1788/src/lpc17_touchscreen.c and lpc17_ssp.c:  Add
	  support for the touschscreen on the WaveShare LCD (2013-4-01).
	* configs/several:  There were already some functions called
	  lpc17_sspinitialize().  So they had to be renamed (2013-4-01).
	* arch/arm/src/lpc17xx/lpc17_ssp.c:  Adapted to work the the LPC178x
	  family (2013-4-01).
	* arch/arm/src/lpc17xx/lpc17_gpio.c/.h:  Separate LPC176x and LPC178x
	  logic into separate files.  The logic is diverging to much to
	  try to retain common code (2013-4-03).
	* net/net_clone.c:  Fix compilation error when socket options are
	  are disabled. Reported by Daniel O'Connor (2013-4-05).
	* configs/zkit-arm-1769/src/up_leds.c:  Fix a typo introduced into
	  the button interrupt logic (2013-4-05).
	* arch/arm/src/lpc17xx/lpc178x_gpio.c:  Re-design of the GPIO
	  logic for the LPC178x family by Rommel Marcelo (2013-4-05).
	* arch/arm/src/lpc17_gpiodbg.c:  Updated so that it correctly
	  reports LPC177x/8x GPIO registers when GPIO debug is enabled
	  (2013-4-05).
